# uv pip install jax[tpu]\>=0.4.31 -f https://storage.googleapis.com/jax-releases/libtpu_releases.html --prerelease=allow

[project]
name = "vaov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "equinox>=0.11.5",
    "fastapi>=0.115.4",
    "flax>=0.9.0",
    "jax-smi>=1.0.4",
    "jax[tpu]>=0.4.35",
    "jaxonnxruntime",
    "libtpu",
    "libtpu-nightly",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "onnx>=1.17.0",
    "orbax>=0.1.9",
    "oryx>=0.2.7",
    "qax>=0.4.1",
    "sentencepiece>=0.2.0",
    "torch>=2.4.1",
    "transformers>=4.44.2",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaov"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "first-index"

[tool.uv.sources]
libtpu-nightly = { url = "https://storage.googleapis.com/libtpu-nightly-releases/wheels/libtpu-nightly/libtpu_nightly-0.1.dev20241010+nightly.cleanup-py3-none-any.whl" }
libtpu = { url = "https://storage.googleapis.com/libtpu-lts-releases/wheels/libtpu/libtpu-0.0.2-py3-none-any.whl" }
jaxonnxruntime = { path = "jort" }
oryx = { git = "https://github.com/jax-ml/oryx", rev = "339bc9215962dc998637d53ca8f19a3cea100ec0" }

[tool.ruff.lint]
ignore = ["F722"]
