# uv pip install jax[tpu]\>=0.4.31 -f https://storage.googleapis.com/jax-releases/libtpu_releases.html --prerelease=allow

[project]
name = "fae"
version = "0.1.0"
description = "Flux SAE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=2.19.1",
    "diffusers>=0.31.0",
    "einops>=0.8.0",
    "equinox>=0.11.10",
    "fastapi>=0.115.4",
    "fh-plotly>=0.1.1",
    "flax>=0.9.0",
    "jax-smi>=1.0.4",
    "jax[tpu]==0.4.35",
    "libtpu==0.0.8",
    "jaxonnxruntime",
    "libtpu-nightly",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "more-itertools>=10.5.0",
    "numba>=0.60.0",
    "onnx>=1.17.0",
    "orbax>=0.1.9",
    "oryx==0.2.7",
    "plotly-express>=0.4.1",
    "python-fasthtml>=0.10.0",
    "qax==0.4.0",
    "sentencepiece>=0.2.0",
    "torch==2.6.0+cpu",
    "torchvision==0.21.0+cpu",
    "transformers>=4.44.2",
    "uvicorn>=0.32.0",
    "wandb>=0.18.7",
    "debugpy>=1.8.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaov"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "first-index"

[[tool.uv.index]]
name = "libtpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"

[tool.uv.sources]
jaxonnxruntime = { path = "jort" }
libtpu-nightly = { url = "https://storage.googleapis.com/libtpu-nightly-releases/wheels/libtpu-nightly/libtpu_nightly-0.1.dev20241010+nightly.cleanup-py3-none-any.whl" }
# libtpu = { url = "https://storage.googleapis.com/libtpu-lts-releases/wheels/libtpu/libtpu-0.0.8-py3-none-linux_x86_64.whl" }
libtpu = { url = "https://storage.googleapis.com/libtpu-lts-releases/wheels/libtpu/libtpu-0.0.2-py3-none-any.whl" }
oryx = { git = "https://github.com/jax-ml/oryx", rev = "93fc9ef6ab99113163937246eb38580ecb093925" }
mishax = { git = "https://github.com/google-deepmind/mishax" }
# qax = { path = "qax", editable = true }

[tool.ruff.lint]
ignore = ["F722"]
